<resources>
    <string name="app_name">Movies review</string>

    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="liked">Liked</string>
    <string name="settings">Settings</string>
    <string name="movie_poster">Movie poster</string>
    <string name="app_description">Movies and serials</string>
    <string name="search">Search…</string>
    <string name="search_input">Enter the name of the film</string>
    <string name="top">Top</string>
    <string name="other">Others</string>
    <string name="rating">Rating</string>
    <string name="date">Release date</string>
    <string name="country">Country</string>
    <string name="genre">Genre</string>
    <string name="age_restrictions">Age restrictions</string>
    <string name="time">Time</string>
    <string name="cast">Cast</string>
    <string name="watch">Watch</string>
    <string name="trailer">See trailer</string>
    <string name="follow">Follow</string>
    <string name="description">Description</string>
    <string name="back">back</string>
    <string name="select_category">Select category</string>
    <string name="films">Films</string>
    <string name="serials">Serials</string>
    <string name="like">Favorite films and serials</string>
    <string name="more">See more</string>
</resources>