<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:windowBackground"
        app:elevation="0dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap"
            android:paddingTop="16dp">
            <View
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/icon"
                android:layout_marginHorizontal="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_description"
                android:textAppearance="@style/main_bold_text" />
        </LinearLayout>

        <TextView
            android:id="@+id/searchEditText"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/search_background"
            android:layout_margin="16dp"
            android:hint="@string/search"
            android:paddingHorizontal="16dp"
            android:textAppearance="@style/main_text"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/homeNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/recycle_description"
                android:text="@string/top"
                android:layout_marginStart="16dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topFilmsRecycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/recycle_description"
                android:text="@string/other"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/otherFilmsRecycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>