<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.detail.DetailActivity"
    android:animateLayoutChanges="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollview">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backButtonBackground"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/back_ic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/back"/>

                <ImageView
                    android:id="@+id/imageBackground"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="160dp"
                android:layout_height="240dp"
                android:layout_marginTop="96dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:transitionName="poster">

                <ImageView
                    android:id="@+id/imagePoster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/movie_poster" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/inter_bold"
                android:textAlignment="center"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonTrailer"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/trailer_ic"
                android:contentDescription="@string/trailer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLabel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLink"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/link_button_background"
                android:fontFamily="@font/inter_bold"
                android:text="@string/watch"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/buttonFollow"
                app:layout_constraintStart_toEndOf="@+id/buttonTrailer"
                app:layout_constraintTop_toBottomOf="@+id/textLabel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonFollow"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/followed_ic"
                android:contentDescription="@string/follow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLabel" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerMainInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/main_information_background"
                android:padding="16dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonLink" />


            <TextView
                android:id="@+id/textDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerMainInformation"
                android:textAppearance="@style/main_bold_text"/>

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="16dp"
                android:textAppearance="@style/main_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDescriptionLabel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:windowBackground"
        android:paddingTop="24dp"
        android:visibility="gone"
        app:navigationIcon="@drawable/back_ic"
        app:titleTextAppearance="@style/main_bold_text">
    </androidx.appcompat.widget.Toolbar>
</FrameLayout>